2007-03-15  Brian Bidulock  <bidulock@openss7.org>

	* manual/news.texi: pushed release date

2007-03-10  Brian Bidulock  <bidulock@openss7.org>

	* netperf/acinclude.m4: includes for linux 2.4 

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* manual/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* netperf.spec.in: updated changelog

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* manual/news.texi: updates for release

	* netperf.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* manual/configure.texi: updates and corrections
	* manual/install.texi: updates and corrections
	* manual/netperf.texi: updates and corrections
	* manual/news.texi: updates and corrections
	* manual/prerequisites.texi: updates and corrections
	* manual/releases.texi: updates and corrections
	* manual/rpm.texi: updates and corrections

2007-02-20  Brian Bidulock  <bidulock@openss7.org>

	* manual/install.texi: updated autoconf required to 2.61

2007-02-12  Brian Bidulock  <bidulock@openss7.org>

	* netperf.spec.in: support for autoconf 2.61
	* configure.ac: support for autoconf 2.61
	* cvsignore: support for autoconf 2.61
	* debian/mscript_header.in: support for autoconf 2.61
	* debian/rules.in: support for autoconf 2.61
	* m4/devfs.m4: support for autoconf 2.61
	* m4/openss7.m4: support for autoconf 2.61
	* m4/streams.m4: support for autoconf 2.61
	* manual/news.texi: support for autoconf 2.61
	* manual/texi/install.texi: support for autoconf 2.61
	* scripts/texi/install.texi: support for autoconf 2.61

2007-01-09  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped version number for next release