@@ -1,7 +1,7 @@
 #!/bin/bash
 # =============================================================================
 # 
-# @(#) $RCSfile: netbenchmark,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2006/05/23 22:43:29 $
+# @(#) $RCSfile: netbenchmark,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/04/04 01:15:06 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -46,7 +46,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/05/23 22:43:29 $ by $Author: brian $
+# Last Modified $Date: 2007/04/04 01:15:06 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -75,7 +75,7 @@ fi
 program=`$ECHO "$0" | $SED -e 's%^.*/%%'`
 modename="$program"
 
-ident='$RCSfile: netbenchmark,v $ $Name:  $($Revision: 0.9.2.4 $)'
+ident='$RCSfile: netbenchmark,v $ $Name:  $($Revision: 0.9.2.5 $)'
 
 HELP="Try \`$program --help' for more information."
 
